--- a/public/phototrip.html
+++ b/public/phototrip.html
@@ -4,56 +4,56 @@
     <title>PhotoTrip</title>    
     <meta charset="UTF-8">  	
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-	<script>window.jQuery || document.write('<script src="/assets/libs/jquery.min.js"><\/script>')</script>
+	<script>window.jQuery || document.write('<script src="/libs/jquery.min.js"><\/script>')</script>
 
-	<link rel="stylesheet" type="text/css" href="/assets/phototrip.css">
+	<link rel="stylesheet" type="text/css" href="/phototrip.css">
 
 	<script type="text/javascript" src="/js/phototrip/phototrip_demo.js"></script>
-	<script type="text/javascript" src="/assets/phototrip.js"></script>
+	<script type="text/javascript" src="/phototrip.js"></script>
 
   </head>
   
 	  <body>
 	  	<section id="photo_trip">
 	  		<article style="display:none" class="wrapper_photo" id="1">
-	  			<img class='photo' src="/assets/phototrip/photos/1.jpg"/>
-	  			<img class="backbutton" onClick="TRIP.back()" src="/assets/phototrip/back.gif"/>
+	  			<img class='photo' src="/phototrip/photos/1.jpg"/>
+	  			<img class="backbutton" onClick="TRIP.back()" src="/phototrip/back.png"/>
 	  		</article>
 	  		<article style="display:none" class="wrapper_photo" id="2">
-	  			<img class='photo' src="/assets/phototrip/photos/2.jpg"/>
-	  			<img class="backbutton" onClick="TRIP.back()" src="/assets/phototrip/back.gif"/>
+	  			<img class='photo' src="/phototrip/photos/2.jpg"/>
+	  			<img class="backbutton" onClick="TRIP.back()" src="/phototrip/back.png"/>
 	  		</article>
 	  		<article style="display:none" class="wrapper_photo" id="3">
-	  			<img class='photo' src="/assets/phototrip/photos/3.jpg"/>
-	  			<img class="backbutton" onClick="TRIP.back()" src="/assets/phototrip/back.gif"/>
+	  			<img class='photo' src="/phototrip/photos/3.jpg"/>
+	  			<img class="backbutton" onClick="TRIP.back()" src="/phototrip/back.png"/>
 	  		</article>
 	  		<article style="display:none" class="wrapper_photo" id="4">
-	  			<img class='photo' src="/assets/phototrip/photos/4.jpg"/>
-	  			<img class="backbutton" onClick="TRIP.back()" src="/assets/phototrip/back.gif"/>
+	  			<img class='photo' src="/phototrip/photos/4.jpg"/>
+	  			<img class="backbutton" onClick="TRIP.back()" src="/phototrip/back.png"/>
 	  		</article>
 	  		<article style="display:none" class="wrapper_photo" id="5">
-	  			<img class='photo' src="/assets/phototrip/photos/5.jpg"/>
-	  			<img class="backbutton" onClick="TRIP.back()" src="/assets/phototrip/back.gif"/>
+	  			<img class='photo' src="/phototrip/photos/5.jpg"/>
+	  			<img class="backbutton" onClick="TRIP.back()" src="/phototrip/back.png"/>
 	  		</article>
 	  		<article style="display:none" class="wrapper_photo" id="6">
-	  			<img class='photo' src="/assets/phototrip/photos/6.jpg"/>
-	  			<img class="backbutton" onClick="TRIP.back()" src="/assets/phototrip/back.gif"/>
+	  			<img class='photo' src="/phototrip/photos/6.jpg"/>
+	  			<img class="backbutton" onClick="TRIP.back()" src="/phototrip/back.png"/>
 	  		</article>
 	  		<article style="display:none" class="wrapper_photo" id="7">
-	  			<img class='photo' src="/assets/phototrip/photos/7.jpg"/>
-	  			<img class="backbutton" onClick="TRIP.back()" src="/assets/phototrip/back.gif"/>
+	  			<img class='photo' src="/phototrip/photos/7.jpg"/>
+	  			<img class="backbutton" onClick="TRIP.back()" src="/phototrip/back.png"/>
 	  		</article>
 	  		<article style="display:none" class="wrapper_photo" id="8">
-	  			<img class='photo' src="/assets/phototrip/photos/8.jpg"/>
-	  			<img class="backbutton" onClick="TRIP.back()" src="/assets/phototrip/back.gif"/>
+	  			<img class='photo' src="/phototrip/photos/8.jpg"/>
+	  			<img class="backbutton" onClick="TRIP.back()" src="/phototrip/back.png"/>
 	  		</article>
 	  		<article style="display:none" class="wrapper_photo" id="9">
-	  			<img class='photo' src="/assets/phototrip/photos/9.jpg"/>
-	  			<img class="backbutton" onClick="TRIP.back()" src="/assets/phototrip/back.gif"/>
+	  			<img class='photo' src="/phototrip/photos/9.jpg"/>
+	  			<img class="backbutton" onClick="TRIP.back()" src="/phototrip/back.png"/>
 	  		</article>
 	  		<article style="display:none" class="wrapper_photo" id="10">
-	  			<img class='photo' src="/assets/phototrip/photos/10.jpg"/>
-	  			<img class="backbutton" onClick="TRIP.back()" src="/assets/phototrip/back.gif"/>
+	  			<img class='photo' src="/phototrip/photos/10.jpg"/>
+	  			<img class="backbutton" onClick="TRIP.back()" src="/phototrip/back.png"/>
 	  		</article>
 	  	</section>
 	  </body>
